crates/uitest/fixtures/ty_check/must_use_attr_unsupported.snap
---
source: crates/uitest/tests/ty_check.rs
expression: diags
input_file: fixtures/ty_check/must_use_attr_unsupported.fe
---
error[12-0001]: unsupported `#[must_use]` attribute on const `VALUE`
  ┌─ must_use_attr_unsupported.fe:1:1
  │
1 │ #[must_use]
  │ ^^^^^^^^^^^ `#[must_use]` is only supported on functions, structs, and enums

error[12-0001]: unsupported `#[must_use]` attribute on contract `BadContract`
  ┌─ must_use_attr_unsupported.fe:4:1
  │
4 │ #[must_use]
  │ ^^^^^^^^^^^ `#[must_use]` is only supported on functions, structs, and enums

error[12-0001]: unsupported `#[must_use]` attribute on module
  ┌─ must_use_attr_unsupported.fe:8:5
  │
8 │     #![must_use]
  │     ^^^^^^^^^^^^ `#[must_use]` is only supported on functions, structs, and enums
